refactor(api): refactor namespace and receiver api
