# internal/server/proto/odpf/siren/v1beta1/siren.pb.gw.go
@@ -292,8 +292,8 @@ func local_request_SirenService_DeleteProvider_0(ctx context.Context, marshaler 
 
 }
 
-func request_SirenService_SendReceiverNotification_0(ctx context.Context, marshaler runtime.Marshaler, client SirenServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq SendReceiverNotificationRequest
+func request_SirenService_NotifyReceiver_0(ctx context.Context, marshaler runtime.Marshaler, client SirenServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq NotifyReceiverRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -321,13 +321,13 @@ func request_SirenService_SendReceiverNotification_0(ctx context.Context, marsha
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "id", err)
 	}
 
-	msg, err := client.SendReceiverNotification(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.NotifyReceiver(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_SirenService_SendReceiverNotification_0(ctx context.Context, marshaler runtime.Marshaler, server SirenServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq SendReceiverNotificationRequest
+func local_request_SirenService_NotifyReceiver_0(ctx context.Context, marshaler runtime.Marshaler, server SirenServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq NotifyReceiverRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -355,13 +355,13 @@ func local_request_SirenService_SendReceiverNotification_0(ctx context.Context, 
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "id", err)
 	}
 
-	msg, err := server.SendReceiverNotification(ctx, &protoReq)
+	msg, err := server.NotifyReceiver(ctx, &protoReq)
 	return msg, metadata, err
 
 }
 
 func request_SirenService_ListNamespaces_0(ctx context.Context, marshaler runtime.Marshaler, client SirenServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq emptypb.Empty
+	var protoReq ListNamespacesRequest
 	var metadata runtime.ServerMetadata
 
 	msg, err := client.ListNamespaces(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
@@ -370,7 +370,7 @@ func request_SirenService_ListNamespaces_0(ctx context.Context, marshaler runtim
 }
 
 func local_request_SirenService_ListNamespaces_0(ctx context.Context, marshaler runtime.Marshaler, server SirenServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq emptypb.Empty
+	var protoReq ListNamespacesRequest
 	var metadata runtime.ServerMetadata
 
 	msg, err := server.ListNamespaces(ctx, &protoReq)
@@ -1652,19 +1652,19 @@ func RegisterSirenServiceHandlerServer(ctx context.Context, mux *runtime.ServeMu
 
 	})
 
-	mux.Handle("POST", pattern_SirenService_SendReceiverNotification_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_SirenService_NotifyReceiver_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
-		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/odpf.siren.v1beta1.SirenService/SendReceiverNotification", runtime.WithHTTPPathPattern("/v1beta1/receivers/{id}/send"))
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/odpf.siren.v1beta1.SirenService/NotifyReceiver", runtime.WithHTTPPathPattern("/v1beta1/receivers/{id}/send"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_SirenService_SendReceiverNotification_0(ctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_SirenService_NotifyReceiver_0(ctx, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
@@ -1672,7 +1672,7 @@ func RegisterSirenServiceHandlerServer(ctx context.Context, mux *runtime.ServeMu
 			return
 		}
 
-		forward_SirenService_SendReceiverNotification_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_SirenService_NotifyReceiver_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -2419,24 +2419,24 @@ func RegisterSirenServiceHandlerClient(ctx context.Context, mux *runtime.ServeMu
 
 	})
 
-	mux.Handle("POST", pattern_SirenService_SendReceiverNotification_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_SirenService_NotifyReceiver_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
-		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/odpf.siren.v1beta1.SirenService/SendReceiverNotification", runtime.WithHTTPPathPattern("/v1beta1/receivers/{id}/send"))
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/odpf.siren.v1beta1.SirenService/NotifyReceiver", runtime.WithHTTPPathPattern("/v1beta1/receivers/{id}/send"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_SirenService_SendReceiverNotification_0(ctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_SirenService_NotifyReceiver_0(ctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_SirenService_SendReceiverNotification_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_SirenService_NotifyReceiver_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -2960,7 +2960,7 @@ var (
 
 	pattern_SirenService_DeleteProvider_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1beta1", "providers", "id"}, ""))
 
-	pattern_SirenService_SendReceiverNotification_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1beta1", "receivers", "id", "send"}, ""))
+	pattern_SirenService_NotifyReceiver_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1beta1", "receivers", "id", "send"}, ""))
 
 	pattern_SirenService_ListNamespaces_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1beta1", "namespaces"}, ""))
 
@@ -3024,7 +3024,7 @@ var (
 
 	forward_SirenService_DeleteProvider_0 = runtime.ForwardResponseMessage
 
-	forward_SirenService_SendReceiverNotification_0 = runtime.ForwardResponseMessage
+	forward_SirenService_NotifyReceiver_0 = runtime.ForwardResponseMessage
 
 	forward_SirenService_ListNamespaces_0 = runtime.ForwardResponseMessage
 
